--- a/scripts/install
+++ b/scripts/install
@@ -1,6 +1,6 @@
-#!/bin/sh -e
+#!/bin/sh -ex
 
-if [[ "${CONTINUOUS_INTEGRATION}" = "true" ]]; then
+if [ "${CONTINUOUS_INTEGRATION}" = "true" ]; then
     BIN_PATH=""
 else
     rm -rf venv
