--- a/scripts/install
+++ b/scripts/install
@@ -5,7 +5,7 @@ if [ "${CONTINUOUS_INTEGRATION}" = "true" ]; then
 else
     rm -rf venv
     virtualenv venv --python=python3.7
-    BIN_PATH="venv/bin"
+    BIN_PATH="venv/bin/"
 fi
 
-${BIN_PATH}/pip install -U -r requirements.txt
+${BIN_PATH}pip install -U -r requirements.txt
